--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/lucide@latest"></script>
-    <script src="https://unpkg.com/recharts/umd/Recharts.js"></script>
+    <!-- Carichiamo Lucide correttamente -->
+    <script src="https://unpkg.com/lucide@0.321.0/dist/umd/lucide.min.js"></script>
+    <!-- Recharts richiede prop-types e recharts stesso -->
+    <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js"></script>
+    <script src="https://unpkg.com/recharts@2.12.0/umd/Recharts.js"></script>
 
     <style>
         /* CSS per ottimizzazione iOS */
@@ -22,32 +25,56 @@
             -webkit-tap-highlight-color: transparent;
             overscroll-behavior-y: none;
             user-select: none;
+            margin: 0;
+            padding: 0;
+            background-color: #f8fafc;
         }
         .safe-top { padding-top: env(safe-area-inset-top); }
         .safe-bottom { padding-bottom: env(safe-area-inset-bottom); }
+        
+        /* Assicuriamoci che il root occupi tutto lo spazio */
+        #root {
+            min-height: 100vh;
+        }
+
+        /* Stile per le icone Lucide */
+        .lucide {
+            display: inline-block;
+            vertical-align: middle;
+        }
     </style>
 </head>
 <body>
     <div id="root"></div>
 
     <script type="text/babel">
-        const { useState, useEffect } = React;
+        const { useState, useEffect, useRef } = React;
         const { 
             XAxis, YAxis, ResponsiveContainer, 
             Cell, BarChart, Bar 
         } = Recharts;
         
-        // Mock Lucide Icons (per semplicità in Single HTML usiamo SVG o Lucide via CDN)
+        // Componente Icona aggiornato per caricare correttamente Lucide
         const Icon = ({ name, size = 24, className = "" }) => {
+            const iconRef = useRef(null);
+
             useEffect(() => {
-                if (window.lucide) window.lucide.createIcons();
+                if (window.lucide) {
+                    window.lucide.createIcons();
+                }
             }, [name]);
-            return <i data-lucide={name} style={{ width: size, height: size }} className={className}></i>;
+
+            return (
+                <i 
+                    data-lucide={name} 
+                    className={`${className}`}
+                    style={{ width: size, height: size }}
+                ></i>
+            );
         };
 
         const App = () => {
             const [view, setView] = useState('monthly');
-            const [isRefreshing, setIsRefreshing] = useState(false);
 
             const financeData = {
                 monthly: {
@@ -98,7 +125,9 @@
                     <header className="sticky top-12 z-50 bg-white/80 backdrop-blur-xl border-b border-slate-100 px-6 py-4 flex justify-between items-center">
                         <div>
                             <h1 className="text-2xl font-black tracking-tight">Finance</h1>
-                            <p className="text-[10px] font-bold text-indigo-500 uppercase tracking-widest leading-none mt-1">{active.label}</p>
+                            <p className="text-[10px] font-bold text-indigo-500 uppercase tracking-widest leading-none mt-1">
+                                {active.label}
+                            </p>
                         </div>
                         <button className="p-3 rounded-full bg-slate-100 active:scale-90 transition-transform">
                             <Icon name="refresh-cw" size={20} className="text-slate-600" />
@@ -109,7 +138,9 @@
                         <section className="bg-indigo-600 p-8 rounded-[2.5rem] shadow-2xl relative overflow-hidden active:scale-[0.98] transition-transform">
                             <div className="relative z-10 text-white">
                                 <p className="text-[10px] font-bold opacity-60 uppercase tracking-widest mb-1">Patrimonio Netto</p>
-                                <h2 className="text-4xl font-black tracking-tighter">{formatCurrency(financeData.annual.netWorth)}</h2>
+                                <h2 className="text-4xl font-black tracking-tighter">
+                                    {formatCurrency(financeData.annual.netWorth)}
+                                </h2>
                                 <div className="mt-6 inline-flex items-center gap-2 bg-white/20 backdrop-blur-md px-4 py-2 rounded-2xl">
                                     <Icon name="trending-up" size={14} className="text-emerald-300" />
                                     <span className="text-xs font-bold">{(active.savingRate * 100).toFixed(0)}% Saving Rate</span>
@@ -120,19 +151,23 @@
 
                         <nav className="flex bg-slate-200/50 p-1 rounded-2xl">
                             {['monthly', 'annual'].map(m => (
-                                <button key={m} onClick={() => setView(m)} className={`flex-1 py-3 rounded-xl text-[10px] font-black tracking-widest transition-all ${view === m ? 'bg-white text-indigo-600 shadow-sm' : 'text-slate-500'}`}>
+                                <button 
+                                    key={m} 
+                                    onClick={() => setView(m)} 
+                                    className={`flex-1 py-3 rounded-xl text-[10px] font-black tracking-widest transition-all ${view === m ? 'bg-white text-indigo-600 shadow-sm' : 'text-slate-500'}`}
+                                >
                                     {m.toUpperCase()}
                                 </button>
                             ))}
                         </nav>
 
                         <div className="grid grid-cols-2 gap-4">
-                            <div className="bg-white p-5 rounded-[2rem] border border-slate-100">
+                            <div className="bg-white p-5 rounded-[2rem] border border-slate-100 shadow-sm">
                                 <Icon name="briefcase" size={20} className="text-blue-500 mb-3" />
                                 <p className="text-[10px] font-bold text-slate-400 uppercase">Entrate</p>
                                 <p className="text-lg font-black">{formatCurrency(active.income)}</p>
                             </div>
-                            <div className="bg-white p-5 rounded-[2rem] border border-slate-100">
+                            <div className="bg-white p-5 rounded-[2rem] border border-slate-100 shadow-sm">
                                 <Icon name="trending-down" size={20} className="text-rose-500 mb-3" />
                                 <p className="text-[10px] font-bold text-slate-400 uppercase">Uscite</p>
                                 <p className="text-lg font-black">{formatCurrency(active.expenses)}</p>
@@ -165,10 +200,17 @@
                                     <ResponsiveContainer width="100%" height="100%">
                                         <BarChart data={financeData.monthly.allocation} layout="vertical" margin={{ left: -30 }}>
                                             <XAxis type="number" hide />
-                                            <YAxis dataKey="name" type="category" width={100} tick={{ fontSize: 9, fill: '#64748b', fontWeight: 800 }} axisLine={false} tickLine={false} />
+                                            <YAxis 
+                                                dataKey="name" 
+                                                type="category" 
+                                                width={100} 
+                                                tick={{ fontSize: 9, fill: '#64748b', fontWeight: 800 }} 
+                                                axisLine={false} 
+                                                tickLine={false} 
+                                            />
                                             <Bar dataKey="value" radius={[0, 10, 10, 0]} barSize={12}>
                                                 {financeData.monthly.allocation.map((entry, index) => (
-                                                    <Cell key={index} fill={entry.color} />
+                                                    <Cell key={`cell-${index}`} fill={entry.color} />
                                                 ))}
                                             </Bar>
                                         </BarChart>
@@ -179,16 +221,25 @@
                     </main>
 
                     <footer className="fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur-2xl border-t border-slate-100 px-10 pt-4 pb-10 flex justify-around items-center rounded-t-[2.5rem] z-[60] safe-bottom">
-                        <Icon name="bar-chart-3" size={28} className="text-indigo-600" />
-                        <Icon name="calendar" size={28} className="text-slate-300" />
-                        <Icon name="credit-card" size={28} className="text-slate-300" />
-                        <Icon name="wallet" size={28} className="text-slate-300" />
+                        <button className="focus:outline-none">
+                            <Icon name="bar-chart-3" size={28} className="text-indigo-600" />
+                        </button>
+                        <button className="focus:outline-none">
+                            <Icon name="calendar" size={28} className="text-slate-300" />
+                        </button>
+                        <button className="focus:outline-none">
+                            <Icon name="credit-card" size={28} className="text-slate-300" />
+                        </button>
+                        <button className="focus:outline-none">
+                            <Icon name="wallet" size={28} className="text-slate-300" />
+                        </button>
                     </footer>
                 </div>
             );
         };
 
-        const root = ReactDOM.createRoot(document.getElementById('root'));
+        const rootElement = document.getElementById('root');
+        const root = ReactDOM.createRoot(rootElement);
         root.render(<App />);
     </script>
 </body>
