--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Babel -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <!-- Tailwind -->
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Recharts -->
@@ -24,12 +24,6 @@
       background: #f8fafc;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
     }
-    .tab {
-      @apply flex-1 py-3 text-xs font-black tracking-widest text-slate-500;
-    }
-    .tab-active {
-      @apply flex-1 py-3 text-xs font-black tracking-widest bg-white text-indigo-600 rounded-xl shadow;
-    }
   </style>
 </head>
 
@@ -38,11 +32,11 @@
 
 <script type="text/babel">
 const { useState, useEffect, useMemo } = React;
-const { ResponsiveContainer, BarChart, Bar, XAxis, Tooltip } = window.Recharts;
 
 const CSV_URL =
   "https://docs.google.com/spreadsheets/d/e/2PACX-1vSgDAnm7O88Kizt7vT79O7K0L7uG_F_Y9_0O-m-t8N-k8j_I0_vJ8N1G9-qM5I9-qL-w9_0N_k8j/pub?gid=1995943682&single=true&output=csv";
 
+/* ---------- DATA ---------- */
 const useFinanceData = (url) => {
   const [data, setData] = useState([]);
   const [loading, setLoading] = useState(true);
@@ -68,7 +62,6 @@ const useFinanceData = (url) => {
     if (!data.length) return null;
 
     const last = data[data.length - 1];
-
     const totalIncome = data.reduce((s,m)=>s+(+m.Income||0),0);
     const totalExpenses = data.reduce((s,m)=>s+(+m.Expenses||0),0);
 
@@ -107,6 +100,7 @@ const format = (v) =>
     maximumFractionDigits: 0
   }).format(v).replace("DKK","kr.");
 
+/* ---------- COMPONENTS ---------- */
 const StatCard = ({ label, value }) => (
   <div className="bg-white p-6 rounded-3xl shadow-sm">
     <p className="text-xs text-slate-400 uppercase">{label}</p>
@@ -114,57 +108,63 @@ const StatCard = ({ label, value }) => (
   </div>
 );
 
-/* ---------- TAB MENSILE ---------- */
-const MonthlyTab = ({ data }) => (
-  <div className="space-y-6">
-    <div className="bg-indigo-600 text-white p-8 rounded-[2.5rem]">
-      <p className="text-xs opacity-60">{data.month}</p>
-      <h2 className="text-4xl font-black">{format(data.net)}</h2>
-      <p className="text-sm mt-2">Saving rate: {data.savingRate}</p>
-    </div>
+const MonthlyTab = ({ data }) => {
+  const { ResponsiveContainer, BarChart, Bar, XAxis, Tooltip } = window.Recharts;
 
-    <div className="grid grid-cols-2 gap-4">
-      <StatCard label="Entrate" value={format(data.income)} />
-      <StatCard label="Uscite" value={format(data.expenses)} />
-    </div>
+  return (
+    <div className="space-y-6">
+      <div className="bg-indigo-600 text-white p-8 rounded-[2.5rem]">
+        <p className="text-xs opacity-60">{data.month}</p>
+        <h2 className="text-4xl font-black">{format(data.net)}</h2>
+        <p className="text-sm mt-2">Saving rate: {data.savingRate}</p>
+      </div>
 
-    <div className="bg-white p-6 rounded-3xl shadow-sm h-48">
-      <ResponsiveContainer>
-        <BarChart data={data.chart}>
-          <XAxis dataKey="name" />
-          <Tooltip />
-          <Bar dataKey="value" fill="#6366f1" radius={[8,8,0,0]} />
-        </BarChart>
-      </ResponsiveContainer>
-    </div>
-  </div>
-);
+      <div className="grid grid-cols-2 gap-4">
+        <StatCard label="Entrate" value={format(data.income)} />
+        <StatCard label="Uscite" value={format(data.expenses)} />
+      </div>
 
-/* ---------- TAB ANNUALE ---------- */
-const AnnualTab = ({ data }) => (
-  <div className="space-y-6">
-    <div className="bg-slate-900 text-white p-8 rounded-[2.5rem]">
-      <p className="text-xs opacity-60">Totale netto annuale</p>
-      <h2 className="text-3xl font-black">{format(data.net)}</h2>
+      <div className="bg-white p-6 rounded-3xl shadow-sm h-48">
+        <ResponsiveContainer width="100%" height="100%">
+          <BarChart data={data.chart}>
+            <XAxis dataKey="name" />
+            <Tooltip />
+            <Bar dataKey="value" fill="#6366f1" radius={[8,8,0,0]} />
+          </BarChart>
+        </ResponsiveContainer>
+      </div>
     </div>
+  );
+};
 
-    <div className="grid grid-cols-2 gap-4">
-      <StatCard label="Entrate totali" value={format(data.income)} />
-      <StatCard label="Uscite totali" value={format(data.expenses)} />
-    </div>
+const AnnualTab = ({ data }) => {
+  const { ResponsiveContainer, BarChart, Bar, XAxis, Tooltip } = window.Recharts;
 
-    <div className="bg-white p-6 rounded-3xl shadow-sm h-56">
-      <ResponsiveContainer>
-        <BarChart data={data.chart}>
-          <XAxis dataKey="name" />
-          <Tooltip />
-          <Bar dataKey="income" fill="#6366f1" radius={[6,6,0,0]} />
-          <Bar dataKey="expenses" fill="#f43f5e" radius={[6,6,0,0]} />
-        </BarChart>
-      </ResponsiveContainer>
+  return (
+    <div className="space-y-6">
+      <div className="bg-slate-900 text-white p-8 rounded-[2.5rem]">
+        <p className="text-xs opacity-60">Totale netto annuale</p>
+        <h2 className="text-3xl font-black">{format(data.net)}</h2>
+      </div>
+
+      <div className="grid grid-cols-2 gap-4">
+        <StatCard label="Entrate totali" value={format(data.income)} />
+        <StatCard label="Uscite totali" value={format(data.expenses)} />
+      </div>
+
+      <div className="bg-white p-6 rounded-3xl shadow-sm h-56">
+        <ResponsiveContainer width="100%" height="100%">
+          <BarChart data={data.chart}>
+            <XAxis dataKey="name" />
+            <Tooltip />
+            <Bar dataKey="income" fill="#6366f1" />
+            <Bar dataKey="expenses" fill="#f43f5e" />
+          </BarChart>
+        </ResponsiveContainer>
+      </div>
     </div>
-  </div>
-);
+  );
+};
 
 /* ---------- APP ---------- */
 const App = () => {
@@ -185,12 +185,16 @@ const App = () => {
       <div className="flex bg-slate-200 p-1 rounded-xl">
         <button
           onClick={()=>setTab("monthly")}
-          className={tab==="monthly" ? "tab-active":"tab"}>
+          className={`flex-1 py-3 text-xs font-black tracking-widest rounded-xl ${
+            tab==="monthly" ? "bg-white text-indigo-600 shadow" : "text-slate-500"
+          }`}>
           MENSILE
         </button>
         <button
           onClick={()=>setTab("annual")}
-          className={tab==="annual" ? "tab-active":"tab"}>
+          className={`flex-1 py-3 text-xs font-black tracking-widest rounded-xl ${
+            tab==="annual" ? "bg-white text-indigo-600 shadow" : "text-slate-500"
+          }`}>
           ANNUALE
         </button>
       </div>
